another way to specify include

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author:      David Brumley
 description: "The Binary Analysis Platform Blog"
 baseurl:     ""
 url:         "http://binaryanalysisplatform.github.io"
-include: ["bap/api/odoc/_odoc-theme"]
+include: [ _odoc-theme ]
 
 # Google analytics
 google_analytics:
