--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,10 +8,10 @@ jobs:
   update-docs:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout blog
-        uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.USER_TOKEN }}
+      - name: Checkout blog️
+        uses: actions/checkout@v2   # If you're using actions/checkout@v2 you must set persist-credentials
+        with:                       # to false in most cases for the deployment to work correctly.
+          persist-credentials: false
 
       - name: Install OCaml
         uses: avsm/setup-ocaml@v1
@@ -28,15 +28,16 @@ jobs:
           path: bap.master
 
       - name: Pin BAP
-        run: opam pin add bap bap.master --no-action
+        run:
+          opam pin add bap bap.master --no-action
 
       - name: Install system dependencies
         run: opam depext -u bap
 
       - name: Install opam dependencies
         run: |
-            opam install bap --deps-only
-            opam install omake
+          opam install bap --deps-only
+          opam install omake
 
       - name: Install Bap
         run: |
@@ -44,23 +45,36 @@ jobs:
           opam exec -- ./configure-omake
           opam exec -- make
           opam exec -- make reinstall
-          cd ../
 
       - name: Build Documentation
         run: |
+          ls -l
           sudo apt-get install emacs-nox man2html --yes
-          opam install odig --yes
+          opam install odig
           opam exec -- make -C bap.master clean
           opam exec -- make -C bap.master doc
+          echo ::set-env name=BLOG_COMMIT_MESSAGE::$(git -C bap.master rev-parse --short HEAD)
 
-      - name: update and push
+      - uses: actions/upload-artifact@v2
+        if: ${{ always() }}
+        with:
+          name: bapdoc-log
+          path: bap.master/doc/bapdoc.log
+
+      - name: update
         run: |
-          git config --global user.name ${{ secrets.USER_NAME }}
-          git config --global user.email ${{ secrets.USER_EMAIL }}
-          cp -r  bap.master/doc/man1 bap/api/
-          cp -r  bap.master/doc/man3 bap/api/
-          cp -r  bap.master/doc/lisp bap/api/
-          cp -rL bap.master/doc/odoc bap/api/
-          git add bap/api
-          git commit -m `git -C bap.master rev-parse --short HEAD` > /dev/null
-          git push origin master
+           mkdir ready
+           mv  bap.master/doc/man1 ready/
+           mv  bap.master/doc/man3 ready/
+           mv  bap.master/doc/lisp ready/
+           mv  bap.master/doc/primus ready/
+           cp -rL bap.master/doc/odoc ready/
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: master
+          FOLDER: ready
+          TARGET_FOLDER: bap/api
+          COMMIT_MESSAGE: ${{ env.BLOG_COMMIT_MESSAGE }}
